; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_push_nums_obj.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_push_nums_obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8**, double*)* @push_nums_obj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_nums_obj(i32* %0, i8** %1, double* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca double*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  store double* %2, double** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @js_newobject(i32* %8)
  store i32 0, i32* %7, align 4
  br label %10

10:                                               ; preds = %32, %3
  %11 = load i8**, i8*** %5, align 8
  %12 = load i32, i32* %7, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8*, i8** %11, i64 %13
  %15 = load i8*, i8** %14, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %35

17:                                               ; preds = %10
  %18 = load i32*, i32** %4, align 8
  %19 = load double*, double** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds double, double* %19, i64 %21
  %23 = load double, double* %22, align 8
  %24 = call i32 @js_pushnumber(i32* %18, double %23)
  %25 = load i32*, i32** %4, align 8
  %26 = load i8**, i8*** %5, align 8
  %27 = load i32, i32* %7, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i8*, i8** %26, i64 %28
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @js_setproperty(i32* %25, i32 -2, i8* %30)
  br label %32

32:                                               ; preds = %17
  %33 = load i32, i32* %7, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %7, align 4
  br label %10

35:                                               ; preds = %10
  ret void
}

declare dso_local i32 @js_newobject(i32*) #1

declare dso_local i32 @js_pushnumber(i32*, double) #1

declare dso_local i32 @js_setproperty(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
